[package]
name = "cli"
version = "0.1.0"
authors = ["Peter PJT <pjtsignups@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.4"
clap={version="2.33.1", features = ["yaml"]}
jfs="0.6.2"
serde_derive="1.0.114" 
serde="1.0.114" 
log = "0.4"
env_logger = "0.7.1"
ego-tree = "0.6.2"
ipsm-lib = {path="../ipsm-lib"}